--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +40,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.grid-holder {
+  background: #f5f5f5;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #484848;
+  border: 0 0 0 1px;
+  /* border: 1px solid #484848; */
+  -webkit-box-shadow: 10px 10px 9px -9px rgba(54,54,54,1);
+  -moz-box-shadow: 10px 10px 9px -9px rgba(54,54,54,1);
+  
+  box-shadow: 10px 10px 9px -9px rgba(54,54,54,1);
+  width: 50%;
+  height: 50%;
+  
+  /* display: grid; */
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  width: 100%;
+  height: 5%;
 }
