--- a/src/nodes.css
+++ b/src/nodes.css
@@ -1,21 +1,23 @@
 .node {
     /* height: 54px; */
-    flex: 1;
+    box-sizing: border-box;
+    flex: 1 1 0px;
     padding: 0px;
     margin: 0px;
     border-left: 0px solid #000;
     transition: all 0.3s;
     -webkit-box-shadow: inset -4px -6px 11px -8px rgba(54,54,54,1);
     -moz-box-shadow: inset -4px -6px 11px -8px rgba(54,54,54,1);
-    box-shadow: inset -2px -2px 10px -8px rgba(54,54,54,1);
+    box-shadow: inset -1px -1px 10px -8px #484848;
 }
 
 .visited {
-    background: #e8e8e8;
+    background: #d0d0d0;
 }
 
 .top {
     border-top: 1px solid #484848;
+    
 }
 
 .left {
@@ -28,4 +30,26 @@
 
 .bottom {
     border-bottom: 1px solid #484848;
+}
+
+
+.Ntop {
+    border-top: 1px solid #d0d0d0;
+    
+}
+
+.Nleft {
+    border-left: 1px solid #d0d0d0;
+}
+
+.Nright {
+    border-right: 1px solid #d0d0d0;
+}
+
+.Nbottom {
+    border-bottom: 1px solid #d0d0d0;
+}
+
+.head {
+    background: #b61717;
 }
